--- a/package.json
+++ b/package.json
@@ -10,8 +10,30 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
+    "@react-native-firebase/storage": "^21.6.1",
+    "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "@reduxjs/toolkit": "^2.5.0",
+    "formik": "^2.4.6",
+    "moment": "^2.30.1",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "^0.76.5",
+    "react-native-gesture-handler": "^2.21.2",
+    "react-native-image-picker": "^7.2.3",
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.16.5",
+    "react-native-safe-area-context": "^5.0.0",
+    "react-native-screens": "^4.3.0",
+    "react-native-vector-icons": "^10.2.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-redux": "^9.2.0",
+    "yup": "^1.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
